--- a/blog.html
+++ b/blog.html
@@ -1,4 +1,4 @@
-<!doctype html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1"><title>Our Blog</title><link rel="icon" href="waitlist/assets/meet-me-outside-logo-zip-file/png/favicon.ico" type="image/x-icon"><script type="module" crossorigin src="/assets/main-BZHQTaR3.js"></script><link rel="stylesheet" crossorigin href="/assets/style-C5wNPy8X.css"></head><script async src="https://www.googletagmanager.com/gtag/js?id=G-HW6T169QP7"></script><script>window.dataLayer = window.dataLayer || [];
+<!doctype html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1"><title>Our Blog</title><link rel="icon" href="waitlist/assets/meet-me-outside-logo-zip-file/png/favicon.ico" type="image/x-icon"><script type="module" crossorigin src="/assets/main-D71CiGA5.js"></script><link rel="stylesheet" crossorigin href="/assets/style-D3d9GAkN.css"></head><script async src="https://www.googletagmanager.com/gtag/js?id=G-HW6T169QP7"></script><script>window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
