--- a/account-deletion.html
+++ b/account-deletion.html
@@ -72,12 +72,13 @@
     <header>
         <div class="container">
             <div id="branding">
-                <h1>Meet Me Outside</h1>
+                <h1>Meet Me Outside Support</h1>
             </div>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="privacy-policy.html">Privacy Policy</a></li>
+                    <li><a href ="EULA.html">EULA</a></li>
                     <li><a href="account-deletion.html">Account Deletion</a></li>
                 </ul>
             </nav>
